fix timestamp wrapping

--- a/styles/notifications-log.less
+++ b/styles/notifications-log.less
@@ -91,6 +91,7 @@
 
       .timestamp {
         flex: 0 0 100px;
+        white-space: nowrap;
         text-align: center;
         border-left: 1px solid @base-border-color;
         line-height: @icon-size;
